--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "Faker": "^0.7.2",
     "babel-core": "^6.17.0",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
